recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:20: error: expected start of definition
	override def run() {
                 ^PentaKoch:23: error: Unmatched closing brace '}' ignored here
}
^